--- a/puppeteer/package.json
+++ b/puppeteer/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "prettier": "^2.8.4",
+    "prettier-plugin-sort-json": "^1.0.0",
     "puppeteer": "^19.6.3"
   }
 }
