--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -1,23 +1,31 @@
-name: Bump save editor data
+name: Bump
 
 on:
   workflow_dispatch:
-  
+    inputs:
+      new_version:
+        required: true
+        description: New version
+        
 concurrency:
   group: "bump"
   cancel-in-progress: true
   
 jobs:
   bump:
-    name: Bump data
+    name: Bump
     runs-on: ubuntu-latest
     steps:
-    
       - name: Checkout
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
       
+      - name: Read current version file
+        id: current_version
+        uses: notiz-dev/github-action-json-property@release
+        with:
+          path: version.json
+          prop_path: game
+        
       - name: Setup Node.js environment
         uses: actions/setup-node@v3
         
@@ -28,11 +36,17 @@ jobs:
       - name: Run script
         run: node index
         working-directory: ./puppeteer
-      
+        
+      - name: Update version file
+        uses: jossef/action-set-json-field@v2.1
+        with:
+          file: version.json
+          field: game
+          value: '${{ inputs.new_version }}'
+        
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
         with:
-          commit-message: test_msg
-          title: test_title
-          body: test_body
-          branch: test_branch
+          committer: start-5 <start-5@users.noreply.github.com>
+          title: '[Automated] Bump ${{ steps.current_version.outputs.prop }} => ${{ inputs.new_version }}'
+          branch: bump-latest
