--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -14,7 +14,7 @@ concurrency:
 jobs:
   bump:
     name: Bump
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
