--- a/.github/workflows/auto-bump.yml
+++ b/.github/workflows/auto-bump.yml
@@ -22,11 +22,13 @@ jobs:
         
       - name: Install packages
         run: npm ci
-        working-directory: ./update_checker
+        #working-directory: ./update_checker
+        working-directory: update_checker
 
       - name: Run checker
         run: node app
-        working-directory: ./update_checker
+        #working-directory: ./update_checker
+        working-directory: update_checker
 
       - name: Echo test
         run: echo $?
