--- a/.github/workflows/auto-bump.yml
+++ b/.github/workflows/auto-bump.yml
@@ -17,18 +17,21 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
       - name: Setup Node.js environment
         uses: actions/setup-node@v3
         
       - name: Install packages
         run: npm ci
-        #working-directory: ./update_checker
-        working-directory: update_checker
+        working-directory: ./update_checker
+        #working-directory: update_checker
 
       - name: Run checker
         run: node app
-        #working-directory: ./update_checker
-        working-directory: update_checker
+        working-directory: ./update_checker
+        #working-directory: update_checker
 
       - name: Echo test
         run: echo $?
